--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "lib-flexible": "^0.3.2",
     "px2rem-loader": "^0.1.9",
     "vant": "^2.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-wechat-title": "^2.0.5"
+    "vue-wechat-title": "^2.0.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
