--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-wechat-title": "^2.0.5",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
